# KaMIS

./: .gitmodules  CMakeLists.txt  compile_withcmake.sh
app/: online_mis.cpp  reduction_evomis.cpp
lib/mis/evolutionary/: kahip_part_impl.h  separator_pool.cpp
lib/mis/evolutionary/combine/: multiway_combine.h
lib/mis/kernel/ParFastKer/fast_reductions/src/: MaximumMatching.cpp  full_reductions.cpp
lib/tools/: mis_graph_io.cpp  mis_graph_io.h
wmis/: CMakeLists.txt
wmis/app/: branch_reduce.cpp  parse_parameters.h  weighted_ls.cpp
wmis/lib/data_structure/priority_queues/: maxNodeHeap2.h
wmis/lib/mis/ils/: ils.h  local_search.h
wmis/lib/mis/kernel/: branch_and_reduce_algorithm.cpp
